# Design-Patterns-HW1

./: AbstractFactory.cpp  AbstractFactory.h  Figures.h  figure_factory.cpp  figure_factory.h  main.cpp  string_to_figure.h
src/: AbstractFactory.h  CMakeLists.txt  Figures.cpp  Figures.h  figure_factory.h  main.cpp  string_to_figure.cpp  string_to_figure.h  test.cpp
